--- a/Client/src/main/resources/client_en.properties
+++ b/Client/src/main/resources/client_en.properties
@@ -31,3 +31,5 @@ label.user=Enter name of person
 
 button.showTaken=Show all books that are not returned
 label.addbook=Add book
+
+label.serverproblem=There was an internal server error
